[gd_scene load_steps=3 format=3 uid="uid://dib33mr1o6pax"]

[ext_resource type="FontFile" uid="uid://rfl04y1mlf2l" path="res://assets/fonts/arcadepix/ARCADEPI.TTF" id="1_4smuc"]
[ext_resource type="Script" path="res://scripts/ui/pause_dlg.gd" id="1_83e3m"]

[node name="pause_dlg" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83e3m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 0.815686)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4smuc")
theme_override_font_sizes/font_size = 10
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="SettingBtn" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4smuc")
theme_override_font_sizes/font_size = 10
text = "SETTINGS"
flat = true

[node name="BackToGameBtn" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4smuc")
theme_override_font_sizes/font_size = 10
text = "BACK to GAME"
flat = true

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4smuc")
theme_override_font_sizes/font_size = 10
text = "EXIT"
flat = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/SettingBtn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToGameBtn" to="." method="_on_back_to_game_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
